--- a/src/app/bleach/main-page/main-page.component.html
+++ b/src/app/bleach/main-page/main-page.component.html
@@ -2,20 +2,24 @@
 <hr>
 <div class="row">
     <div class="col">
-        <h3>Personajes: </h3>
+        <app-personajes></app-personajes>
+        <!-- <h3>Personajes: </h3>
         <hr>
         <ul >
             <li *ngFor="let personaje of personajes">{{personaje.nombre}} - {{personaje.poder | number}}</li>
-        </ul>
+        </ul> -->
     </div>
     <div class="col">
-        <h3>Agregar:</h3>
+        <app-agregar 
+            [nuevo]="nuevo"
+        ></app-agregar>
+        <!-- <h3>Agregar:</h3>
         <hr>
         <form (ngSubmit)="agregar();">
             <input type="text" placeholder="Nombre del Personaje" name="nomnbre" [(ngModel)] = "nuevo.nombre">
-            <!-- [value]="nuevo.nombre" (input) ="cabiarNombre( $event);" -->
+            <!-- [value]="nuevo.nombre" (input) ="cabiarNombre( $event);" 
             <input type="number" placeholder="Puntos de poder" name= "poder" [(ngModel)] = "nuevo.poder">
             <button type="submit">Agregar</button>
-        </form>
+        </form> -->
     </div>
 </div>
